# Instamessages

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.ts
.github/workflows/: windows-build.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/(app)/: layout.tsx  page.tsx
app/api/conversations/: route.ts
app/api/dev-login/: route.ts
app/api/import/: route.ts
app/api/realtime-token/: route.ts
app/api/settings/: route.ts
app/blocked/: page.tsx
app/onboarding/: page.tsx
app/privacy/: page.tsx
app/settings/: page.tsx
app/testers/: page.tsx
components/: block-instagram-banner.tsx  chat.tsx  dock-hint-banner.tsx  download-mac-button.tsx  extension-button.tsx  get-started.tsx  gradient-avatar.tsx  hero-preview.tsx  identify-user.tsx  import-button.tsx  install-app.tsx  install-button.tsx  mac-only.tsx  mobile-coming-soon.tsx  new-message.tsx  onboarding-steps.tsx  posthog-provider.tsx  push-banner.tsx  pwa-register.tsx  settings-form.tsx  setup-steps.tsx  sidebar.tsx  terminal-install.tsx  thread-list.tsx
extension/: manifest.json  rules.json  store-listing.md
lib/: account.ts  analytics.ts  extension.ts  format.ts  ingest.ts  instagram.ts  push-client.ts  push.ts  session.ts  supabase.ts  sync.ts  thread-cache.ts  webhook-verify.ts
public/: Instachat.dmg  sw.js
supabase/: auto-reply.sql  schema.sql
wrapper/: build-dmg.sh  package-lock.json  package.json
wrapper/src-tauri/: Cargo.toml  tauri.conf.json
wrapper/src-tauri/icons/: icon.icns
wrapper/src-tauri/src/: lib.rs  main.rs
(+12 files in other folders)
