[package]
name = "instamessages-wrapper"
version = "0.1.0"
description = "Caged instagram.com: DMs only, no feed, no reels"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-deep-link = "2"
serde_json = "1"

[profile.release]
strip = true
lto = true
