[package]
name = "instamessages-wrapper"
version = "0.1.0"
description = "Caged instagram.com: DMs only, no feed, no reels"
edition = "2021"

[lib]
name = "instamessages_wrapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-deep-link = "2"
serde_json = "1"

[profile.release]
strip = true
lto = true
